[package]
name = "diesel_enum_derive"
version = "1.0.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
description = "Simple Enum derive for [Postgres only] Varchar fields"
license = "MIT"
homepage = "https://github.com/terry90/diesel-enum-derive"
repository = "https://github.com/terry90/diesel-enum-derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = { version = "1.0.96", features = ["derive"] }
proc-macro2 = "1.0.39"
heck = "0.4.0"
